--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
-cmake_minimum_required(VERSION 3.28)
-project(untitled C)
+cmake_minimum_required(VERSION 3.16)
+project(cc C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(untitled main.c
+
+
+add_executable(main main.c
         chroot.c
         chroot.h
         execv.c
-        execv.h
-        sss.c)
+        execv.h)
