--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,7 @@ add_executable(main main.c
         chroot.c
         chroot.h
         execv.c
-        execv.h)
+        execv.h
+        unshare.h
+        unshare.c
+        )
